# Python-Finance

./: .breakpoints  .replit  ADP.csv  DAILYTEST.csv  Divergences.xlsx  MSFT SPY.csv  MSFT.csv  OUTPUT.csv  README.md  SCREEN_PASSED.csv  SETS.csv  SPY.csv  SafeZone_Test_Data.csv  TEST.csv  add.py  add_indicators.py  animate.py  best_ma.py  config.py  control_panel_ui.py  download_market_data.py  elder_divergence_screen.py  elder_divergence_screener.py  elder_triple_screen  elder_triple_screen.py  elder_triple_screen_old.py  get_data_and_save_to_csv.py  get_order_levels.py  get_stock_data.py  impulse_background.py  main.py  market_data.py  my data.csv  my_datetime.py  my_trades.py  naked_trades.py  objects.py  output.py  package-lock.json  plot.py  (+20 more)
a_test_data/: 3IN.L.csv  AAF.L.csv
config/: market.csv
data/: 3IN.L.csv  888.L.csv  AAF.L.csv  AAIF.L.csv  AAL.L.csv  AAS.L.csv  ABC.L.csv  ABD.L.csv  ABDN.L.csv  ABF.L.csv  ACIC.L.csv  ACRL.L.csv  ACSO.L.csv  ADIG.L.csv  ADM.L.csv  ADT1.L.csv  AEI.L.csv  AEP.L.csv  AERI.L.csv  AERS.L.csv  AET.L.csv  AEWU.L.csv  AFC.L.csv  AGFX.L.csv  AGR.L.csv  AGT.L.csv  AGTA.L.csv  AHT.L.csv  AIBG.L.csv  AIE.L.csv  AJB.L.csv  AJIT.L.csv  AJOT.L.csv  ALAI.L.csv  ALFA.L.csv  ALL.L.csv  ALM.L.csv  ALNA.L.csv  ALTN.L.csv  AMC.L.csv  (+832 more)
indicator code/: impulse.txt
my trades/: trades.csv
naked trades/: MAP.csv  Shares.csv  Spread_Longs.csv  Spread_Shorts.csv
screen passed/: 888.L.csv  ABC.L.csv  ADM.L.csv  ADT1.L.csv  AFC.L.csv  AGFX.L.csv  AHT.L.csv  AMGO.L.csv  ANTO.L.csv  APP.L.csv  ASAI.L.csv  ASCL.L.csv  ASHM.L.csv  ATG.L.csv  AVV.L.csv  (+246 more)
(+47 files in other folders)
