[tool.poetry]
name = "repl_python3_Python-Finance"
version = "0.1.0"
description = ""
authors = ["seemayer <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
finplot = "^1.8.1"
pandas = "^1.4.2"
yfinance = "^0.1.70"
yahoo-fin = "^0.8.9"
openpyxl = "^3.0.9"
xlrd = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
